--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Project 4 | iNeuron</title>
   </head>
 
   <body>
